# gram

./: README.md  bun.lockb  justfile  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: chat.rs  config.rs  error.rs  ipc.rs  lib.rs  main.rs
src/components/: Editor.tsx  editor.tsx  textarea.tsx
src/components/ui/: input.tsx
src/lib/: types.ts  utils.ts
